--- a/form.html
+++ b/form.html
@@ -1,5 +1,7 @@
 <html>
-
+<head>
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/prashantkadam927/test/prashant1502/formcss.css">
+  </head>
 <div class="container">
   <form action="action_page.php">
 
