--- a/form.html
+++ b/form.html
@@ -10,7 +10,9 @@
 
     <label for="lname">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
+ <label for="fname">father Name</label>
+    <input type="text" id="fname" name="fathername" placeholder="Your fathers name is">
+    
     <label for="country">Country</label>
     <select id="country" name="country">
       <option value="australia">Australia</option>
